--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 
 body{
-  background-color:skyblue;
+  background-color:darkgrey;
 }
 .App {
   text-align: center;
@@ -47,11 +47,11 @@ body{
 h2{
   margin-top: 30px;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  background-color: coral;
+  background-color: beige;
 }
 
 h3{
-  background-color: cornsilk;
+  background-color: beige;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
@@ -62,7 +62,7 @@ h3{
 
 
 h4{
-  background-color: darkturquoise;
+  background-color: beige;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
@@ -77,6 +77,7 @@ h4{
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease-in-out;
 }
+
 
 .product-card:hover {
   transform: scale(1.05);
@@ -117,4 +118,49 @@ h4{
 
 .add-to-cart:hover {
   background-color: #2980b9;
+}
+.loading-screen {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  background-color:skyblue;
+}
+
+.loading-gif {
+  width: 600px;
+  height: 500px;
+}
+
+.loading-text {
+  margin-top: 16px;
+  font-size: 20px;
+  color: #555;
+}
+
+.loading-text {
+  margin-top: 16px;
+  font-size: 20px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: 800;
+  color: #555;
+  display: flex;
+  align-items: center;
+}
+
+.loading-dots {
+  animation: loadingDots 1s infinite;
+}
+
+@keyframes loadingDots {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
 }
